FDG-6999 Fix wrap style

--- a/src/components/glossary/glossary-term/glossary-popover-definition.module.scss
+++ b/src/components/glossary/glossary-term/glossary-popover-definition.module.scss
@@ -59,6 +59,7 @@
   border-radius: 0.25rem;
   padding: 0.125rem 0.25rem;
   color: white;
+  white-space: nowrap;
   .bookIcon {
     color: white;
     height: 0.875rem;
